# instructor-typing-sample

./: README.md  main.py  parallel.py  pyproject.toml
.github/workflows/: linters.yml
