[tool.poetry]
name = "instructor-typing-sample"
version = "0.1.0"
description = ""
authors = ["Richard <richard@stromer.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
instructor = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
