[tool.poetry]
name = "instructor-typing-sample"
version = "0.1.0"
description = ""
authors = ["Richard <richard@stromer.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
instructor = "^1.3.7"
langfuse = "^2.39.3"
openai = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
